kompose/event-ui/event-ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: event-ui
    component: frontend
  name: event-ui
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    app: event-ui
